tests/spec/emit/snapshots/array_built_at_interface_element_type_needs_no_rebuild.snap
---
source: tests/spec/emit/go_interface_adapter.rs
description: |
  
  struct Boom {}
  
  impl Boom {
    fn Error(self) -> string {
      "boom"
    }
  }
  
  fn first(errs: Array<error, 2>) -> string {
    errs[0].Error()
  }
  
  fn test() {
    let errs: Array<error, 2> = [Boom {}, Boom {}]
    if first(errs) != "boom" {
      panic("array built at the interface element type was rebuilt wrongly")
    }
  }
---
package main

type Boom struct{}

func (b Boom) Error() string {
	return "boom"
}

func first(errs [2]error) string {
	return errs[0].Error()
}

func test() {
	errs := [2]error{Boom{}, Boom{}}
	if first(errs) != "boom" {
		panic("array built at the interface element type was rebuilt wrongly")
	}
}
