tests/spec/emit/snapshots/array_equality.snap
---
source: tests/spec/emit/arrays.rs
description: |
  
  fn same(a: Array<int, 2>, b: Array<int, 2>) -> bool {
    a == b
  }
---
package main

func same(a, b [2]int) bool {
	return a == b
}
