tests/spec/emit/snapshots/array_for_loop.snap
---
source: tests/spec/emit/arrays.rs
description: |
  
  fn sum(a: Array<int, 3>) -> int {
    let mut total = 0
    for x in a {
      total = total + x
    }
    total
  }
---
package main

func sum(a [3]int) int {
	total := 0
	for _, x := range a {
		total += x
	}
	return total
}
