tests/spec/emit/snapshots/array_from_in_match_binds_comma_ok_pair.snap
---
source: tests/spec/emit/arrays.rs
description: |
  
  fn first(xs: Slice<int>) -> int {
    match Array.from<int, 3>(xs) {
      Some(a) => a[0],
      None => 0,
    }
  }
---
package main

func first(xs []int) int {
	ret_1, ok := func(s []int) ([3]int, bool) {
		if len(s) != 3 {
			return [3]int{}, false
		}
		return ([3]int)(s), true
	}(xs)
	if ok {
		a := ret_1
		return a[0]
	} else {
		return 0
	}
}
